# inertia-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  REQUIREMENTS.md  linting.ps1
.github/workflows/: linting.yaml  tests.yaml
examples/actix_ssr/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.js
examples/actix_ssr/src/: main.rs
examples/actix_ssr/www/: app.tsx  index.css  root.html  ssr.tsx
examples/actix_ssr/www/pages/: Contact.tsx  Index.tsx
examples/actix_ssr/www/pages/Foo/: Index.tsx
src/: config.rs  error.rs  http_method.rs  inertia.rs  lib.rs  node_process.rs  page.rs  props.rs  req_type.rs  temporary_messages.rs  temporary_session.rs  utils.rs
src/core/: inertia_errors.rs  mod.rs
src/features/: actix.rs  mod.rs
src/features/template_resolvers/: basic_vite_resolver.rs  mod.rs
src/providers/: actix.rs  mod.rs
src/providers/actix_provider/: facade.rs  headers.rs  impls.rs  middleware.rs  mod.rs
src/utils/: mod.rs  struct_to_json_map.rs
tests/: test_p_actix.rs
tests/common/: mod.rs  root_layout.html  template_resolver.rs
