[package]
name = "inertia_rs"
description = "A Rust server-adapter for building modern MVC web apps with Inertia."
repository = "https://github.com/KaioFelps/inertia-rust"
keywords = ["inertia", "mvc", "react"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = [ "Kaio Felipe" ]

[features]
default = ["actix"]
actix = ["dep:actix-web"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
url = { version =  "2.5.2", features = ["serde"] }
actix-web = { version = "4.9.0", features = ["default"], optional = true }
hyper = { version = "1.4.1", features = ["http1", "http2", "client"] }
tokio = { version = "1.40", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
async-trait = "0.1.82"