[package]
name = "inertia_rs"
description = "A Rust server-adapter for building modern MVC web apps with Inertia."
repository = "https://github.com/KaioFelps/inertia-rust"
keywords = ["inertia", "mvc", "react"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = [ "Kaio Felipe" ]

[features]
default = ["actix"]
actix = ["dep:actix-web"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.83"
reqwest = { version = "0.12", features = ["json"] }
actix-web = { version = "4.9.0", features = ["default"], optional = true }
log = "0.4.22"