[package]
name = "inertia-rust"
description = "A Rust server-adapter for building modern MVC web apps with Inertia."
repository = "https://github.com/KaioFelps/inertia-rust"
keywords = ["inertia", "mvc", "react"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = [ "Kaio Felps" ]
license-file = "LICENSE"
exclude = [
    "examples/*",
    ".idea/*",
    ".vscode/*"
]

[features]
default = ["actix"]
actix = ["dep:actix-web"]
basic-vite-resolver = ["dep:vite-rust"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.83"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4.22"
tokio = { version = "1.40.0", features = ["fs", "io-std", "test-util", "rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
actix-web = { version = "4.9.0", features = ["default"], optional = true }
vite-rust = { version = "0.2", optional = true, features = ["basic-directives"] }
futures-util = "0.3.31"
