[package]
name = "actix-example"
version = "0.1.0"
edition = "2021"

[dependencies]
inertia_rust = { path = "../../", features = ["default", "basic-vite-resolver"] }
actix-web = "4"
tokio = { version = "1.40.0", features = ["fs", "io-std", "test-util", "rt", "rt-multi-thread", "macros"] }
serde_json = "1.0"
actix-files = "=0.6.6"
vite-rust = { version = "0.1.3", features = ["basic_directives"] }
regex = "1.11.0"
serde = "1.0.210"
dotenvy = "0.15.7"
